# testcars

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  entrypoint.sh  pyproject.toml  seed.py
backend/app/: models.py  routes.py
backend/migrations/: env.py
backend/migrations/versions/: 55b96705ab85_initial_squashed_migration.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.js
frontend/src/components/: CarList.js  DealerAppointments.js
frontend/src/store/: index.js
