[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.2.2"
Flask-SQLAlchemy = "^3.0.2"
Flask-Migrate = "^4.0.0"
psycopg2-binary = "^2.9.5"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
